--- a/tpms-ios/Info.plist
+++ b/tpms-ios/Info.plist
@@ -17,11 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.3</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Connect BLE TPMS hardware</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>CenturyGothicBold.ttf</string>
